@@ -12,6 +12,9 @@ if @lead.status == "converted"
       page << refresh_sidebar(:index, :filters)
     elsif called_from_landing_page?("campaigns")
       page << refresh_sidebar_for(:campaigns, :show, :summary)
+      if @opportunity
+        page.insert_html :top, :opportunities, :partial => "opportunities/opportunity", :collection => [ @opportunity ]
+      end
     else
       page[:recently].replace :partial => "common/recently"
     end
